file cleanup and rename for Skills Forward project

--- a/sf-droplets/css/sf-droplets.scss
+++ b/sf-droplets/css/sf-droplets.scss
@@ -1,11 +1,11 @@
 /*!
- * DROPLETS
- * @version: 3.2.9
- * @updated on: 10-24-2022
+ * SKILLS FORWARD DROPLETS
+ * @version: 1.0.0
  * @author: Ethan Lin
- * @url: https://github.com/oel-mediateam/droplets-v3
+ * @updated on: xx-xx-2022
+ * @url: https://github.com/oel-mediateam/skills-forward-droplets
  * @license: The MIT License (MIT)
- * @copyright: (c) 2018-2022 Learning Technology & Media, University of Wisconsin Extended Campus
+ * @copyright: (c) 2022 Learning Technology & Media, University of Wisconsin Extended Campus
  */
 /* TABLE OF CONTENTS
 --------------------------------------------------------------------------------
